--- a/Vis & Society Assignment 3.html
+++ b/Vis & Society Assignment 3.html
@@ -27,8 +27,11 @@
 		<section>
 			<h2>Phase One: Sketching Visualizations</h2>
 		<p>
-			My question for visualization was "How does the difference 
-			in gender populations vary based on birth year?"
+			My question for visualization was initially "How does the difference 
+			in gender populations vary based on birth year?" In part 2, I decided
+			to shift my question to "How do the trends in the 
+			gender ratio across age compare for 1900 and 2000?"
+
 		</p>
 
       <figure>
@@ -74,7 +77,50 @@
 				</li>
 			</ul>
 
+
       <figure>
+				<img src="./Vis &amp; Society Assignment 3_files/2.png" alt="">
+				<figcaption>
+					This sketch displays the proportion of men versus the proportion of women 
+					in pie charts for each 10-year age range in the 2000 year data. 
+				</figcaption>
+			</figure>
+
+			<p>
+				Design Rationale for Sketch 2:
+			</p>
+
+			<ul>
+				<li>
+					Though I'm not the happiest this visualization, I wanted to make something 
+					that allows you to see changes in proportion easily. I chose to use pie charts 
+					because I think it's easy for a person to recognize a fraction of a pie 
+				</li>
+				<li>
+					Though there is some information loss in terms of the difference counts,
+					the data normalization is really helpful to see trends in proportion that 
+					are not affected by population
+				</li>
+				<li>
+					Since I didn't want 20 different pie charts to compare with, I 
+					also thought it would be a good idea to aggregate the data over 10-year
+					age ranges. Aggregating did help make the sketch easier to look at, but there 
+					is unfortunately some loss in granularity.
+				</li>
+				<li>
+					Through this sketch, I found that the proportion of women drastically increases 
+					at the last few age ranges, which is something that I hope is commmunicated
+					through these pie charts
+				</li>
+				
+				<li>
+					I think I would want to find a way to make an uncluttered visualization with 
+					disaggregated data and still allow 
+					for a viewer to see the decreasing trend within the proportions.
+				</li>
+			</ul>
+
+			<figure>
 				<img src="./Vis &amp; Society Assignment 3_files/3.png" alt="">
 				<figcaption>
 					This sketch displays a stacked bar chart whose bars represent the percent of the 
@@ -86,72 +132,47 @@
 			</figure>
 
 			<p>
-				Design Rationale for Sketch 2:
+				Design Rationale for Sketch 3:
 			</p>
 
 			<ul>
 				<li>
 					I think the stacked bar chart lets the viewer compare between years 
-					a little more accurately than the numerical difference chart
-				</li>
-				<li>
-					Though there is some information loss in terms of the difference counts,
-					the data normalization is really helpful to see trends in proportion that 
-					are not affected by population
-				</li>
-				<li>
-					After making this chart, I realized that the percentage of women increases
-					dramatically in the last few age spans, which is a new and exciting finding to 
-					highlight!
+					a little more accurately than the numerical difference chart and pie charts
 				</li>
 				<li>
 					I would want to see if I can incorporate data from the 1900s with this chart,
 					but still don't know how to do this in a way that's not too cluttered
 				</li>
 				<li>
-					I'm not sure how easy it is to see the difference in scale between the 49% women
-					to 75% women in the chart, so I might want to experiment with a visualization that lets
-					you compare proportions a bit easier (Note: I end up doing this in my next sketch)
-				</li>
-			</ul>
-
-      <figure>
-				<img src="./Vis &amp; Society Assignment 3_files/2.png" alt="">
-				<figcaption>
-					This sketch displays the proportion of men versus the proportion of women 
-					in pie charts for each 10-year age range in the 2000 year data. 
-				</figcaption>
-			</figure>
-
-			<p>
-				Design Rationale for Sketch 3:
-			</p>
-
-			<ul>
-				<li>
-					Though I'm not the happiest this visualization, I wanted to make something 
-					that allows you to see changes in proportion easily. I chose to use pie charts 
-					because I think it's easier for a person to recognize 1/2 and 3/4 of a pie than
-					1/2 and 3/4 of a bar
+					Though I feel it's easier to estimate proportions using pie charts, I hope 
+					that stacked bars will be able to provide a similar amount of visual information
 				</li>
 				<li>
-					Since I didn't want 20 different pie charts to compare with, I 
-					also thought it would be a good idea to aggregate the data over 10-year
-					age ranges. Aggregating did help make the sketch easier to look at, but there 
-					is unfortunately some loss in granularity.
-				</li>
-				<li>
-					I still wanted to easily communicate that the proportion of women drastically increases 
-					at the last few age ranges, which I found in the previous sketch, and think that the 
-					pie charts are able to provide this information
+					I like that a stacked bar chart let you read a graph both right side up and upside down,
+					and decided to include an axis on both sides of the bars, where once increases in scale while 
+					the other decreases in scale
 				</li>
 			</ul>
 
       <h3>Reflection</h3>
 
       <p>
-        WRITE REFLECTION ON ALL 3 SKETCHES HERE.
+		While each of my designs has varied strengths and weaknesses, I believe I am happiest with my 3rd design.
+		My first design is nice because it preserves the numerical differences between men and women and also only 
+		includes one bar per age range, giving it a shape that I feel is very easy to follow. However, I've realized 
+		through my second and third designs that raw counts may not tell the full story of this data. My 2nd and 3rd 
+		designs instead display the <i>proportion</i> of men and women for each age range, normalizing these counts 
+		into percentages that can be compared more plausibly. My second design has its benefits because is takes advantage 
+		of how easy it is to read general fractions on a circle. However, minute differences between two pie charts are 
+		difficult to perceive, and this visualization may require many charts unless the age ranges are aggregated. My third 
+		design addresses these issues because it puts the pie chart proportions into bars that can be put next to each other
+		for much simpler comparison that can accommodate all age ranges without being too overwhelming to look at. As stated in 
+		my rationale, I also like my third visualization a lot because it can be read as a simple bar chart representing either 
+		percent male or percent female population, depending on what axis you use. For the next part of this assignment, I hope 
+		to use my 2nd design as inspiration and think about if it's possible to include data from the 1900s set. 
       </p>
+
 
 		</section>
 
@@ -159,9 +180,12 @@
 			<h2>Phase Two: Final Design</h2>
 
 			<figure>
-				<img src="./Vis &amp; Society Assignment 3_files/A3_final.jpg" alt="">
+				<img src="./Vis &amp; Society Assignment 3_files/A3.jpg" alt="">
 				<figcaption>
-				ENTER IMAGE CAPTION HERE.
+				This is an overlaid stacked bar chart that incorporates data from 1900 and 2000.
+				It uses orange and dark blue to represent the proportion of men and women for a 
+				particular age range in the year 2000, and yellow and light blue 
+				to represent the proportion of men and women for a particular age range in the year 1900.
 				</figcaption>
 			</figure>
 		</section>
@@ -169,15 +193,57 @@
 		<section>
 			<h2>Design Process &amp; Design Decisions</h2>
 
+			
 			<p>
-        DESCRIBE YOUR DESIGN PROCESS AND DECISION DECISIONS HERE.
-      </p>
+				When designing my final visualization, I began by trying to recreate the 
+				third visualzation sketch I made in part 1. My visual encodings included a 
+				stacked bar chart with inverted dual axes that scaled from 0 to 100 percent.
+				After this point, I began to get curious about incorportating data from 1900.
+				So, I decided to slightly modify my focus question to "How do the trends in the 
+				gender ratio across age compare for 1900 and 2000?" Though this may have been an ambitious design decision, I felt that 
+				it would allow me to take full advantage of the data provided and potentially create a 
+				visualization that could allow for a variety of information to be drawn from it.
+      		</p>
+			<p>
+				With my changed research question, I decided to make a second bar chart for the 1900
+				data that mirrored the one for 2000. Then, I experimented with ways to overlay these two 
+				stacked bar charts. By playing around with color, width, and opacity, I ended up with the
+				visualization above. First, I chose a light and dark orange to represent men and a light and 
+				dark blue to represent women. I chose not to map women to pink and men to blue, as has 
+				been done historically in data visualizations, to do my part in breaking gender stereotyping.
+				Additionally, I chose to use a thin bar and dark colors for the 2000 data to make it 
+				easily differentiable from the wide bar and light/opaque colors of the 1900 data. By choosing one 
+				visual encoding to emphasize for both the 1900 and 2000 data (width and color intensity, repectively),
+				I feel that I was able to get an output visualization that encompasses a great deal of information, 
+				is not too cluttered, and can be read in multiple ways to realize gender ratio trends from 1900 and 2000.
+				Given this visualization, I hope to communicate that in both 1900 and 2000, the gender ratio 
+				is very close to 50/50 for ages up to thirty. Afterwards, the women become an increasingly large 
+				majority of the population, though the scale of that increate is much larger in 2000, where women 
+				are 75% of the population over 90, compared to 57% of the population in 1900.
+			</p>
 
 
       <h3>Reflection</h3>
 
       <p>
-        WRITE YOUR FINAL REFLECTION HERE.
+        To be honest,
+		I was tempted to skip part 1 and make visualizations without sketching at all first.
+		In hindsight, I am very glad that I made my sketches. 
+		This process helped me question every element I decided to bring into my visualization; these 
+		were no longer default settings that could appear at a click of a button. Instead, I found myself
+		thinking about decisions such as changing my x-axis representation to birth year rather than age range,
+		which I thought about only because I found writing "0 to 5; 5 to 10; 10 to 15" too tedious. Though I 
+		chose to stick with age ranges for my final visualization, I feel much more confident about using them.
+		
+		In addition to these smaller design decisions, the sketches helped me grapple with two main concerns:
+		if I should include data for both years (1900 and 2000) and whether I should represent
+		gender differences through pure numerical counts or through ratios. 
+		Though I wasn't able to figure the first concern out through my sketches, 
+		this line of thinking about incorporating both 1900 and 2000 data put me on the right
+		track for making my final visualization that overlaid stacked bar graphs for each year. 
+		Meanwhile, I was able to make a decision to 
+		use ratios instead of counts in my final design because I found such neat trends in my sketches.
+		
       </p>
 		</section>
 	</main>
